# tf-serverless

./: .gitignore  Cargo.toml  serverless.yml
aws_lambda/: Cargo.toml
aws_lambda/src/: main.rs
openfaas/: tf-classify.yml
openfaas-vaccel/: tf-classify.yml
openfaas-vaccel/template/rust-http/: Dockerfile  launch_vaccel.sh
openfaas/template/rust-http/: Dockerfile  template.yml
openfaas/tf-classify/: Cargo.toml
src/aws_lambda/: Cargo.toml
src/openfaas/: Cargo.toml
src/openfaas/src/: main.rs
src/tf-classify/: Cargo.toml
src/tf-classify/src/: main.rs
src/tf-serve/src/: lib.rs
tf-classify/: Cargo.toml
tf-classify-lambda/: Cargo.toml
tf-classify-lambda/src/: main.rs
tf-classify/src/: main.rs
tf-serve/: Cargo.toml
tf-serve/src/: lib.rs
