[package]
name = "lambda"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros"] }
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tf-serve = { path = "../tf-serve" }
env_logger = "0.9"
log = "0.4"
base64 = "0.13"
