[package]
name = "tf-serve"
version = "0.1.0"
authors = ["Babis Chalios <mail@bchalios.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tensorflow = "0.17.0"
image = "0.21.0"
log = "0.4"
chrono = "0.4"
reqwest = "0.9.18"
base64 = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
