[package]
name = "handler_openfaas"
version = "0.1.0"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros", "full"] }
hyper = { version = "0.14.3", features = ["full"] }
env_logger = "0.9"
serde_json = "1.0"
serde = "1.0"
tf-serve = { path = "../tf-serve" }
